Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.5.6: December 13th, 2009

* tweak pkgcore configuration subsystem to tell you the parameter involved
  when it's passed an incorrectly typed object.

* fix an encoding issue w/ utf8 ebuilds on merging.


pkgcore 0.5.5: November 26th, 2009

* portage changed their flat_hash support a while back, specifically
  how mtime was stored.  We match that now (although it's daft to do so)
  for compatibility sake- primarily affected CVS users.

* removed a potential in the merge engine where triggers that didn't
  do an abspath on items they added could incorrectly be moved.
  Specifically affected FEATURES=debugedit for /usr/lib -> lib64 pathways.

* boolean restrictions now default to being finalized.

* pkgcore.fs.ops.offset_rewriter -> pkgcore.fs.contents.offset_rewriter

* various code cleanups, quite a few conversions to snakeoil.klass
  decorators/property tricks to simplify the code.

* experimental python3.1 support.  Bugs welcome, although till stated
  otherwise, it's considered unsupported.

* pkgcore.restrictions.values.ComparisonMatch has been removed.

* for overlayed repositories that have invalid atom stacking in their
  package.mask, give an appropriate error message indicating the file.

* gentoo bug 196561, PMS doesn't match portage behaviour for '~' atom
  operator.  Being that the pms definition has never been accurate, and
  portage hasn't handled '~' w/ a revision in any sane form, and finally
  do to portage adding a repoman check for this (bug 227225) pkgcore is
  now strict about disallowing revisions with '~'.  Scream at PMS to
  fix their doc if it's problematic.

* certain ebuilds (ssmtp for example) expect D to have a trailing '/'.
  Force this (outside pms compliance, so we match portage behaviour).


pkgcore 0.5.4: October 30, 2009

* minor bug fix release fixing filter-env invocation (wasn't covered
  by tests)

